--- a/register.html
+++ b/register.html
@@ -43,7 +43,8 @@
             </button>
 
             <div class="collapse navbar-collapse d-lg-flex" id="navbar">
-                <a class="navbar-brand col-lg-3 me-0" href="#">SkillHub</a>
+                <a class="navbar-brand col-lg-3 me-0" href="#"><img src="logo.png" alt=""
+                        style="max-width: 30%; height: auto;" id="logo"></a>
                 <ul class="navbar-nav col-lg-6 justify-content-lg-center">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -124,7 +125,7 @@
 
                 <span>
                     Already have an account?
-                    <a href="signin.html" class="text-primary">Sign in here.</a>
+                    <a href="login.html" class="text-primary">Sign in here.</a>
                 </span>
             </div>
         </div>
