--- a/login.html
+++ b/login.html
@@ -43,7 +43,8 @@
             </button>
 
             <div class="collapse navbar-collapse d-lg-flex" id="navbar">
-                <a class="navbar-brand col-lg-3 me-0" href="#">SkillHub</a>
+                <a class="navbar-brand col-lg-3 me-0" href="#"><img src="logo.png" alt=""
+                        style="max-width: 30%; height: auto;" id="logo"></a>
                 <ul class="navbar-nav col-lg-6 justify-content-lg-center">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -107,7 +108,7 @@
                     </div>
                     <span>
                         Don’t have an account yet?
-                        <a href="./signup.html" class="text-primary">Register here</a>
+                        <a href="register.html" .html" class="text-primary">Register here</a>
                     </span>
                 </div>
             </div>
