--- a/mycourse_pemilik.html
+++ b/mycourse_pemilik.html
@@ -114,12 +114,12 @@
             </button>
 
             <div class="collapse navbar-collapse d-lg-flex" id="navbar">
-                <a class="navbar-brand col-lg-3 me-0" href="home_visitor.html">
+                <a class="navbar-brand col-lg-3 me-0" href="home_pemilik.html">
                     <img src="logo.png" alt="" style="max-width: 30%; height: auto;" id="logo">
                 </a>
                 <ul class="navbar-nav col-lg-6 justify-content-lg-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="home_visitor.html">Home</a>
+                        <a class="nav-link" href="home_pemilik.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="discover_pemilik.html">Discover</a>
